--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
     <section class="jumbotron">
       <div class="container">
-        <div class"row text-center">
+        <div class="row text-center">
           <h2>Upcoming Events</h2>
           <h2>Coding</h2> 
           <h3>The Future Is Here.</h3>
