--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<html>
   <head>
     <title>Jerome Robotics Club</title>
-    
+    <link href='https://fonts.googleapis.com/css?family=Roboto:700,300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
     <link rel="stylesheet" type="text/css" href="style.css"/>
   </head>
