--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
       <footer class="container">
         <div class="row">
-          <p class="col-sm-4">jeromeroboticsclub</p>
+          <p class="col-sm-4">Created by: Luis Fluckiger</p>
           <ul class="col-sm-8 text-right">
             <li class="col-sm-1">
               <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/facebook-grey.svg" />
