--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <h1>Luis Fluckiger</h1>
           <div class="row">
           <h3>
-          <a href="file:///C:/Users/googleyuser/Desktop/Main%20folder%20project%206/Fluckiger_p6.html" href="#" class="btn-main"> Denver Broncos Blog </a>
+          <a href="Fluckiger_p6.html" href="#" class="btn-main"> Denver Broncos Blog </a>
           </h3>
           </div>
 
