--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
          <div class="row">
          <h3>
-          <a href="career%20page.html" class="btn btn-primary"> Career </a>
+          <a href="career_page.html" class="btn btn-primary"> Career </a>
           </h3>
         </div>
         </div>
