--- a/career page.html
+++ b/career page.html
@@ -65,7 +65,7 @@
       </div>
     </section>
     <section>
-      <a href="file:///C:/Users/googleyuser/Desktop/Main%20folder%20project%206/index.html#">Back to Homepage</a>
+      <a href="donellfluckiger.github.io">Back to Homepage</a>
     </section>
 
     <footer>
