--- a/career page.html
+++ b/career page.html
@@ -65,7 +65,7 @@
       </div>
     </section>
     <section>
-      <a href="donellfluckiger.github.io">Back to Homepage</a>
+      <a href="https://donellfluckiger.github.io/">Back to Homepage</a>
     </section>
 
     <footer>
