--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="col">
           <img src="https://s3.amazonaws.com/codecademy-content/projects/broadway/design.svg">
           <h2>Games</h2>
-          <p>Make your projects look great and interact beautifully.</p>
+          <p>Play some games.</p>
           <a href="#"> Learn More</a><br>
         </div>
 
