--- a/Fluckiger_p6.html
+++ b/Fluckiger_p6.html
@@ -50,7 +50,7 @@
        <footer>
        Luis@Broncosforlife.com  Phone:(123)-123-1123
        <div>
-       <a href="file:///C:/Users/googleyuser/Desktop/Main%20folder%20project%206/index.html#">Back to Homepage</a>
+       <a href="https://donellfluckiger.github.io/">Back to Homepage</a>
        </div>
      </footer>
 
