--- a/index.html
+++ b/index.html
@@ -44,22 +44,22 @@
         <div class="col">
           <img src="https://s3.amazonaws.com/codecademy-content/projects/broadway/design.svg">
           <h2>Games</h2>
-          <p>Play some games.</p>
-          <a href="#"> Learn More</a><br>
+          <p>Play Run 3</p>
+          <a href="#"> Play </a><br>
         </div>
 
         <div class="col">
           <img src="https://s3.amazonaws.com/codecademy-content/projects/broadway/develop.svg">
-          <h2>Develop</h2>
-          <p>Use modern tools to turn your design into a web site</p>
-          <a href="#"> Learn More</a><br>
+          <h2>Games</h2>
+          <p>Play a basketball game</p>
+          <a href="#"> Play </a><br>
         </div>
 
         <div class="col">
           <img src="https://s3.amazonaws.com/codecademy-content/projects/broadway/deploy.svg">
-          <h2>Deploy</h2>
-          <p>Use modern tools to turn your design into a web site</p>
-          <a href="#"> Learn More</a><br>
+          <h2>Other</h2>
+          <p>Other information</p>
+          <a href="#"> Learn More </a><br>
         </div>
 
       </div>
