--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <img src="https://s3.amazonaws.com/codecademy-content/projects/broadway/design.svg">
           <h2>Games</h2>
           <p>Play Run 3</p>
-          <a href="#"> Play </a><br>
+          <a href="https://www.coolmathgames.com/0-run-3"> Play </a><br>
         </div>
 
         <div class="col">
