--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <img src="https://s3.amazonaws.com/codecademy-content/projects/broadway/develop.svg">
           <h2>Games</h2>
           <p>Play a basketball game</p>
-          <a href="#"> Play </a><br>
+          <a href="https://www.coolmathgames.com/0-cannon-basketball"> Play </a><br>
         </div>
 
         <div class="col">
