--- a/career_page.html
+++ b/career_page.html
@@ -46,7 +46,7 @@
       </div>
     </section>
     <section>
-      <a href="https://donellfluckiger.github.io/">Back to Homepage</a>
+      <a class="btn btn-primary" href="https://donellfluckiger.github.io/">Back to Homepage</a>
     </section>
 
     <footer>
