--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
 
         <div class="col">
           <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTV7oDc00TkAIXVuQOkE9bAfp9w9wQSPJ0XjiNSWuZYSXHifj4z">
-          <h2>Games</h2>
+          <h2>Game</h2>
           <p>Play Run 3</p>
           <a href="https://www.coolmathgames.com/0-run-3"> Play </a><br>
         </div>
 
         <div class="col">
-          <img src="https://s3.amazonaws.com/codecademy-content/projects/broadway/develop.svg">
-          <h2>Games</h2>
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQxK5Erd---BovSxQDnWFZTXs7uSd-qaGNyz5aHG9otwwVyy4fRLQ">
+          <h2>Game</h2>
           <p>Play a basketball game</p>
           <a href="https://www.coolmathgames.com/0-cannon-basketball"> Play </a><br>
         </div>
