--- a/contact_index.html
+++ b/contact_index.html
@@ -16,19 +16,14 @@
     </header>
 
     <main>
-      <div class="jumbotron">
-        <div class="container">
-          <h1>/h1>
-          
-        </div>
-      </div>
+      <h2>Phone: (123) 123-1123</h2>
     </main>
 
 
 
     <section class="supporting">
       <div class="container">
-        <a href"https://donellfluckiger.github.io/#">Back to Homepage</a>
+        <a href="https://donellfluckiger.github.io/#">Back to Homepage</a>
        
       </div>
     </section>
