--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
           <ul>
-            <li> About </li> <li> Work </li> <li> Team </li> <a href="contact_index.html"> Contact </a>
+            <li> About </li> <li> Work </li> <li> Team </li> <li> Contact </li>
           </ul>
         </nav>
     </header>
