--- a/career_page.html
+++ b/career_page.html
@@ -36,7 +36,15 @@
           <li><h3>I have had some experience with my dad.</h3></li>
           <li><h3>I enjoy math and science.</h3></li>
     </body>
+<section class="supporting">
+      <div class="container">
 
+        
+
+      </div>
+    </section>
+        <section>
+        </section>
 
     
     <section>
